--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
         "start": "http-server ./public -o" ,
-        "build": "npm install && npm run build"
+        "build": "npm install && npm run start"
   },
   "keywords": [],
   "author": "",
