--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "http-server ./public -o" ,
-        "build": "npm install && npm run start"
+    "start": "http-server ./public -o",
+    "build": "npm install && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "serve": "^14.2.1"
+    "http-server": "^14.1.1"
   }
 }
